# codingdojo

./: README.md  php.sh
c++-criteron/: CMakeLists.txt  README.md
c++-criteron/src/: CMakeLists.txt  application.cpp  application.hpp  calculator.cxx  calculator.hxx
c++-criteron/test_calc/: CMakeLists.txt  test_calc.cxx
c++-criteron/verif/: CMakeLists.txt  tester.cpp
coffeescript-jasmine/: README.md
coffeescript-jasmine/spec/: calculator_spec.coffee
coffeescript-jasmine/src/: calculator.coffee
csharp-nunit/: .gitignore  CodingDojo.sln  README.md  start-gui.bat
csharp-nunit/Src/: Calculator.cs  Src.csproj
csharp-nunit/Src/Properties/: AssemblyInfo.cs
csharp-nunit/Tests/: CalculatorTests.cs  TestResult.xml  Tests.VisualState.xml  Tests.csproj  Tests.nunit
csharp-nunit/Tests/Properties/: AssemblyInfo.cs
csharp-nunit/_ReSharper.CodingDojo/: ModuleIds.xml
csharp-nunit/_ReSharper.CodingDojo/BuildScriptCache/: .crc
csharp-nunit/_ReSharper.CodingDojo/ConditionalNames/: .crc
csharp-nunit/_ReSharper.CodingDojo/JavaScriptCache/: .crc
csharp-nunit/_ReSharper.CodingDojo/NamedArguments/: .crc
csharp-nunit/_ReSharper.CodingDojo/TodoItems/: .crc
csharp-nunit/_ReSharper.CodingDojo/WordIndex/: .crc
csharp-nunit/_ReSharper.Tests/: ModuleIds.xml
csharp-nunit/_ReSharper.Tests/BuildScriptCache/: .crc
csharp-nunit/_ReSharper.Tests/ConditionalNames/: .crc
csharp-nunit/_ReSharper.Tests/JavaScriptCache/: .crc
csharp-nunit/_ReSharper.Tests/NamedArguments/: .crc
csharp-nunit/_ReSharper.Tests/TodoItems/: .crc
csharp-nunit/_ReSharper.Tests/WordIndex/: .crc
groovy-junit/: README.md  build.gradle
java-junit/: README.md  pom.xml
javascript-jasmine/: README.md  index.html
javascript-jasmine/spec/: calculator-spec.js  calculator_spec.js
javascript-jasmine/src/: calculator.js
javascript-qunit/: README.md  index.html
javascript-qunit-minispade/: .gitignore  Assetfile  Gemfile  README.md  Rakefile
javascript-qunit-minispade/lib/: index.html
javascript-qunit-minispade/src/: calculator.js
javascript-qunit-minispade/test/: calculator_test.js
javascript-qunit/js/: calculator.js
javascript-qunit/src/: calculator.js
javascript-qunit/test/: calculator-test.js  calculator_test.js
php-phpunit/: README.md
php-phpunit/src/: Calculator.php
php-phpunit/tests/: CalculatorTest.php
python-doctest/: README.md  calculator.py
python-nose/: README.md
python-nose/calc/: calculator.py
python-nose/tests/: calculator_test.py
python-unitest/: README.md  calculator_test.py
ruby-minitest-spec/: README.md
ruby-minitest-spec/lib/: calculator.rb
ruby-minitest-spec/spec/: calculator_spec.rb
ruby-minitest-unit/: README.md
ruby-minitest-unit/lib/: calculator.rb
ruby-minitest-unit/test/: calculator_test.rb
ruby-rspec/: README.md  lor
ruby-rspec/spec/: calculator_spec.rb
(+7 files in other folders)
